# OmniNav

./: .gitignore  All_Landmarks.json  All_Transforms.json  CLAUDE.md  CMakeLists.txt  README.md  标定测试板.STL
Model/Model/: 2025-12-30-Scene.mrml  Isodose_ColorTable_DefaultCopy.ctbl  Pt1.mrk.json  Pt2.mrk.json  Pt3.mrk.json  Pt4.mrk.json  plate.stl
SRC/: OmniNav.cpp  OmniNav.h  config.json  demo.cpp  main.cpp
SRC/Base/: Base.cpp  Base.h  Base.ui  Base_ui.py  Display.cpp  Display.h  Display.ui  config.json
SRC/Base/resource/: Base.qrc  Display.qrc
SRC/CombinedAPI/: CombinedApi.cpp  CombinedApi.h  MarkerData.h  PortHandleInfo.h  SystemAlert.h  ToolData.h  Transform.h
SRC/CombinedAPIsample/sample/: sample.vcxproj
SRC/CombinedAPIsample/sample/src/: main.cpp
SRC/IO/: NDICombinedWorker.cpp  NDICombinedWorker.h  NDIWorker.cpp  NDIWorker.h
SRC/Item/: Image.cpp  Image.h  Landmark.cpp  Landmark.h  Model3D.cpp  Model3D.h  OmniTransform.cpp  OmniTransform.h  Tool.cpp  Tool.h
SRC/Modules/BaseModule/: BaseModule.cpp  BaseModule.h  BaseModule.ui  BaseModule_ui.py
SRC/Modules/DataManager/: DataManager.cpp  DataManager.h  DataManager.ui  DataManager_ui.py  config.json
SRC/Modules/DataManager/resource/: Base_rc.py  DataManager.qrc  DataManager_rc.py
SRC/Modules/ElectromagneticNavigation/: ElectromagneticNavigation.cpp  ElectromagneticNavigation.h  ElectromagneticNavigation.ui  ElectromagneticNavigation_ui.py
SRC/Modules/OpticalNavigation/: OpticalNavigation.cpp  OpticalNavigation.h  OpticalNavigation.ui  config.json
SRC/Modules/PunctureRobot/: PunctureRobot.cpp  PunctureRobot.h  PunctureRobot.ui  RobotWorker.cpp  RobotWorker.h  config.json
SRC/Modules/PunctureRobot/drivers/: adc.h  io.h  main.c  pwm.h  usb_device.h
SRC/NewUrAPI/: ByteOrderConvert.hpp  DataStream.hpp  EasyBuffer.cpp  EasyBuffer.h  EasyDataIO.cpp  EasyDataIO.h  IOUtility.cpp  IOUtility.h  NetworkUtility.cpp  NetworkUtility.h  QtUtility.cpp  QtUtility.h  RobotTypes.cpp  RobotTypes.h  URController.cpp  URController.h  URMath.cpp  URMath.h  URScript.script  scope_guard.hpp  span.hpp  static_block.hpp
SRC/Utils/: GeometryUtils.cpp  GeometryUtils.h  VisualizationUtils.cpp  VisualizationUtils.h
SRC/ndicapi/: ndicapi.cxx  ndicapi_socket_win32.cxx
docs/: README.md
docs/plan/: Tool_STL_Binding_Plan.md
docs/review/: PROJECT_REVIEW.md  README.md  TECHNICAL_DEEP_DIVE.md
